force-app/main/default/objects/ssot__WebsiteEngagement__dlm/fields/ssot__EngagementTimeMilliseconds__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementTimeMilliseconds__c</fullName>
    <label>Engagement Time Milliseconds</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementTimeMilliseconds</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>