force-app/main/default/objects/ssot__WebsiteEngagement__dlm/fields/ssot__FileName__c.field-meta.xml
<CustomField>
    <fullName>ssot__FileName__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FileName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>