force-app/main/default/objects/ssot__WebsiteEngagement__dlm/fields/ssot__FormSubmitText__c.field-meta.xml
<CustomField>
    <fullName>ssot__FormSubmitText__c</fullName>
    <label>Form Submit Text</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FormSubmitText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>