force-app/main/default/objects/ssot__WebsiteEngagement__dlm/fields/ssot__IsOutbound__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsOutbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Outbound</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsOutbound</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>