force-app/main/default/objects/ssot__WebsiteEngagement__dlm/fields/ssot__ItemListId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ItemListId__c</fullName>
    <label>Item List Id</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ItemListId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>