force-app/main/default/objects/ssot__WebsiteEngagement__dlm/fields/ssot__LinkClassesText__c.field-meta.xml
<CustomField>
    <fullName>ssot__LinkClassesText__c</fullName>
    <label>Link Classes</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LinkClassesText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>