force-app/main/default/objects/ssot__WebsiteEngagement__dlm/fields/ssot__LinkDomainName__c.field-meta.xml
<CustomField>
    <fullName>ssot__LinkDomainName__c</fullName>
    <label>Link Domain</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LinkDomainName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>