force-app/main/default/objects/ssot__WebsiteEngagement__dlm/fields/ssot__rel_1732260233659_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260233659_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WebsiteEngagement_UtmId_map_Campaign_rel</label>
    <referenceTo>ssot__Campaign__dlm</referenceTo>
    <relationshipLabel>WebsiteEngagement_UtmId_map_Campaign_rel</relationshipLabel>
    <relationshipName>rel_1732260233659_end</relationshipName>
    <type>Lookup</type>
</CustomField>