force-app/main/default/objects/ssot__WebsiteEngagement__dlm/fields/ssot__UtmCampaignName__c.field-meta.xml
<CustomField>
    <fullName>ssot__UtmCampaignName__c</fullName>
    <label>UTM Campaign</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UtmCampaignName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>